[tool.poetry]
name = "inverse-market-scenario-builder"
version = "0.1.0"
description = "Simulate scenarios of attack and attack mitigation on Overlay's inverse market"
authors = ["deepsp94 <anantsp94@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
eth-brownie = "^1.19.1"
jupyter = "^1.0.0"
brownie-token-tester = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
